--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fullcalendar/core": "^6.0.3",
+    "@fullcalendar/daygrid": "^6.1.1",
+    "@fullcalendar/interaction": "^6.1.1",
+    "@fullcalendar/list": "^6.1.1",
+    "@fullcalendar/react": "^6.1.2",
+    "@fullcalendar/timegrid": "^6.1.1",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
     "@mui/x-data-grid": "^5.17.20",
